--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@babel/preset-typescript": "7.24.7",
         "@commitlint/cli": "^19.5.0",
         "@commitlint/config-conventional": "^19.5.0",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
         "@testing-library/react": "16.0.1",
         "@testing-library/user-event": "14.5.2",
         "@types/react": "18.3.8",
@@ -47,14 +48,17 @@
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react": "7.36.1",
         "eslint-plugin-react-hooks": "4.6.2",
+        "html-webpack-plugin": "^5.6.0",
         "husky": "^8.0.0",
         "jest": "29.7.0",
         "jest-environment-jsdom": "29.7.0",
         "lint-staged": "15.2.10",
         "prettier": "3.3.3",
+        "react-refresh": "^0.14.2",
         "source-map-loader": "5.0.0",
         "ts-jest": "29.2.5",
-        "typescript": "5.6.2",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.6.2",
         "webpack": "5.94.0",
         "webpack-cli": "5.1.4",
         "webpack-dev-server": "5.1.0",
